src/main/java/examples/basic/invalid/BasicSendWithInvalidRecipients.java
package examples.basic.invalid;

import com.socketLabs.SendResponse;
import examples.Example;

public class BasicSendWithInvalidRecipients implements Example {

    public SendResponse RunExample ()  throws Exception {
        return null;
    }
}
